added jump data in UI

--- a/FtvApp/Localizable.xcstrings
+++ b/FtvApp/Localizable.xcstrings
@@ -483,6 +483,9 @@
         }
       }
     },
+    "Erro ao inicializar base de dados" : {
+
+    },
     "Estratégia" : {
       "localizations" : {
         "en" : {
