added high jump in chart

--- a/FtvApp/Localizable.xcstrings
+++ b/FtvApp/Localizable.xcstrings
@@ -38,9 +38,6 @@
         }
       }
     },
-    "%.0f cm" : {
-
-    },
     "%lld" : {
       "localizations" : {
         "en" : {
@@ -108,6 +105,9 @@
           }
         }
       }
+    },
+    "Altura" : {
+
     },
     "Batimento" : {
       "localizations" : {
@@ -826,9 +826,6 @@
         }
       }
     },
-    "Maiores pulos" : {
-
-    },
     "MÁX" : {
       "localizations" : {
         "en" : {
@@ -1474,9 +1471,6 @@
           }
         }
       }
-    },
-    "Total de pulos: %lld" : {
-
     },
     "Treine saltos com passada controlada e aterrissagem suave. Tente corrigir postura e alinhar braços, tronco e pernas no movimento." : {
       "localizations" : {
