--- a/FtvApp/Localizable.xcstrings
+++ b/FtvApp/Localizable.xcstrings
@@ -403,6 +403,12 @@
             "state" : "translated",
             "value" : "Training teilen"
           }
+        },
+        "pt-BR" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Compartilhar treino"
+          }
         }
       }
     },
