--- a/FtvApp/Localizable.xcstrings
+++ b/FtvApp/Localizable.xcstrings
@@ -1296,6 +1296,9 @@
         }
       }
     },
+    "Gerando imagem..." : {
+
+    },
     "Imagem copiada para a área de transferência" : {
       "localizations" : {
         "en" : {
